<resources>

    <string name="app_name">CO2EmissionAlert</string>
    <string name="menu_settings">Settings</string>
    <color name="white">#FFFFFF</color>
    <string name="title_activity_welcome">CO2EmissionAlert</string>
    <string name="mode">TRANSPORT MODE:</string>
    <string name="walk">Walking</string>
    <string name="bike">Bicycle</string>
    <string name="tram">Tram</string>
    <string name="ferry">Ferry</string>
    <string name="metro">Metro</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="car">Car</string>
    <string name="startlogging">Start</string>
    <string name="stoplogging">Exit</string>
    <string name="reading">Initializing tracking process &#8230;</string>
    <string name="tsummary">Text summary</string>
    <string name="version">V1.2.0</string>
    <string name="groupwork">GroupWork: Junlong Xiang, Xiang Gao, Feihua Qu</string>
    
    
</resources>